--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <label for="jidlo">Jídlo: </label>
         <progress id="jidlo" max="30" value="30"></progress>
         <div>
+            Skóre: 
+            <span id="skore">0</span>
+        </div>
+        <div>
             <span id="cislo1"></span>
              + 
              <span id="cislo2"></span>
